Fixed stretch menu and code style

--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,22 @@
+html {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+
 body,
 .nav__list {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
+  font-family: inherit;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  align-items: center;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
-}
-
-.header-big {
-  max-width: 1200px;
 }
 
 .nav {
